<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:background="@color/white"
		android:paddingBottom="17dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="17dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_username"
			android:textColor="@color/title_text"/>

		<EditText
			android:id="@+id/login_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:background="@null"
			android:hint="@string/login_input_username"
			android:maxLength="50"
			android:textColorHint="@color/edit_hint"
			android:textSize="14sp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="1px"
		android:background="@color/white"
		android:paddingBottom="17dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="17dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_password"
			android:textColor="@color/title_text"/>

		<EditText
			android:id="@+id/login_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:background="@null"
			android:hint="@string/login_input_password"
			android:inputType="textWebPassword"
			android:maxLength="50"
			android:textColorHint="@color/edit_hint"
			android:textSize="14sp"/>
	</LinearLayout>

	<TextView
		android:id="@+id/login_forget_pwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:layout_marginRight="10dp"
		android:layout_marginTop="15dp"
		android:text="@string/login_forger_password"
		android:textColor="@color/title_text"
		android:textSize="12sp"/>

	<TextView
		android:id="@+id/login_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="40dp"
		android:background="@drawable/store_manage_conserve"
		android:gravity="center"
		android:paddingBottom="5dp"
		android:paddingTop="5dp"
		android:text="@string/login"
		android:textColor="@color/white"
		android:textSize="16sp"/>

	<TextView
		android:id="@+id/login_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:text="@string/login_no_account"
		android:visibility="gone"/>
</LinearLayout>