<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/store_message_commercial_tenant"
		style="@style/StoreMessageItem">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/store_manager_address"
			android:textColor="@color/title_text"
			android:textSize="14sp"/>

		<EditText
			android:id="@+id/store_manage_location"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_marginLeft="10dp"
			android:layout_weight="1"
			android:background="@null"
			android:hint="@string/store_manager_input_address"
			android:padding="0dp"
			android:singleLine="true"
			android:textColor="@color/title_text"
			android:textColorHint="@color/edit_hint"
			android:textSize="14sp"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/store_manage_map"
		style="@style/StoreMessageItem"
		android:layout_marginTop="1px"
		android:paddingRight="0dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/store_manager_select_location"
			android:textColor="@color/title_text"/>

		<TextView
			android:id="@+id/store_manage_contact"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="13dp"
			android:text="@string/store_manager_to_map_add"
			android:textColor="@color/text_hint"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/ic_right_arrow"/>
	</LinearLayout>

	<TextView
		android:id="@+id/store_manage_save"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="75dp"
		android:background="@drawable/store_manage_conserve"
		android:gravity="center"
		android:padding="0dp"
		android:text="@string/save"
		android:textColor="@color/title_bg"
		android:textSize="16sp"/>
</LinearLayout>