<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/store_manage_open_shop"
		style="@style/StoreMessageItem"
		android:layout_marginTop="12dp"
		android:paddingRight="0dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/store_manager_open_time"
			android:textColor="@color/title_text"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/store_manage_open_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="13dp"
			android:text="@string/store_manager_open_time_detail"
			android:textColor="@color/text_hint"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/ic_right_arrow"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/store_manage_close_shop"
		style="@style/StoreMessageItem"
		android:layout_marginTop="1dp"
		android:paddingRight="0dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/store_manager_close_time"
			android:textColor="@color/title_text"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/store_manage_close_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="13dp"
			android:text="@string/store_manager_close_time_detail"
			android:textColor="@color/text_hint"/>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/ic_right_arrow"/>
	</LinearLayout>

	<TextView
		android:id="@+id/store_manage_save_time"
		android:layout_width="match_parent"
		android:layout_height="96px"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="75dp"
		android:background="@drawable/store_manage_conserve"
		android:gravity="center"
		android:padding="0dp"
		android:text="@string/save"
		android:textColor="@color/title_bg"
		android:textSize="16sp"/>
</LinearLayout>