<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:background="@color/white"
		android:paddingBottom="17dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="17dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/find_password_newpass"
			android:textColor="@color/title_text"/>

		<EditText
			android:id="@+id/alter_pwd_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:background="@null"
			android:hint="@string/find_password_input_newpass"
			android:inputType="numberPassword"
			android:maxLength="30"
			android:singleLine="true"
			android:textColorHint="@color/edit_hint"
			android:textSize="14sp"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="1px"
		android:background="@color/white"
		android:paddingBottom="17dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="17dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/find_password_ensure_newpass"
			android:textColor="@color/title_text"/>

		<EditText
			android:id="@+id/alter_pwd_input_again"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:background="@null"
			android:hint="@string/find_password_input_again"
			android:inputType="numberPassword"
			android:maxLength="30"
			android:singleLine="true"
			android:textColorHint="@color/edit_hint"
			android:textSize="14sp"/>
	</LinearLayout>

	<TextView
		android:id="@+id/alter_pwd_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="75dp"
		android:background="@drawable/store_manage_conserve"
		android:gravity="center"
		android:paddingBottom="5dp"
		android:paddingTop="5dp"
		android:text="@string/button_ok"
		android:textColor="@color/white"/>
</LinearLayout>