<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/store_manage_store_message"
		style="@style/StoreMessageItem">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableRight="@drawable/ic_right_arrow"
			android:textColor="@color/title_text"
			android:text="@string/store_manager_store_info"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/store_manage_photo_control"
		style="@style/StoreMessageItem"
		android:layout_marginTop="1px">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableRight="@drawable/ic_right_arrow"
			android:textColor="@color/title_text"
			android:text="@string/store_manager_photo_manager"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/store_manage_on_off"
		style="@style/StoreMessageItem"
		android:layout_marginTop="1px">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/store_manager_store_switch"
			android:textColor="@color/title_text"/>

		<TextView
			android:id="@+id/store_manage_store_on_off"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:background="@drawable/store_manage_selector"
			android:textIsSelectable="true"/>
	</LinearLayout>
</LinearLayout>
